# Kurion-Shared

./: .gitignore  Cargo.toml  README.md  build_with_features.ps1  build_with_features.sh  encrypt_payload.sh
core/: Cargo.toml
core/src/: common.rs  console.rs  lib.rs  version.rs
crypto/: Cargo.toml
crypto/src/: aes_gcm.rs  dpapi.rs  lib.rs  master_key.rs  nss.rs  seco.rs
extractor/: Cargo.toml
extractor/src/: file_search.rs  lib.rs  socials.rs  wallets.rs
extractor/src/games/: battlenet.rs  ea.rs  epic.rs  growtopia.rs  minecraft.rs  mod.rs  roblox.rs  steam.rs  ubisoft.rs
injector/: Cargo.toml  app.manifest  build.rs
injector/src/: c2.rs  desktop.rs  main.rs  sysinfo.rs
injector/src/injector/: benign_imports.rs  browser_discovery.rs  browser_terminator.rs  discord.rs  discord_payload.js  encrypted_payload.rs  injector.rs  mod.rs  module_stomping.rs  persistence.rs  pipe_server.rs  process_manager.rs
payload/: Cargo.toml  build.rs
payload/src/: browser_config.rs  lib.rs  pipe_client.rs
sys/: Cargo.toml
sys/src/: anti_analysis.rs  dynamic_api.rs  evasion.rs  internal_api.rs  lib.rs  remote_patch.rs  sleep_obfuscation.rs
sys/src/com/: elevator.rs  mod.rs
tools/: pe_patcher.py
