[package]
name = "kurion_crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
kurion_core = { path = "../core" }
kurion_sys = { path = "../sys" }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
] }
aes-gcm = { version = "0.10", default-features = false, features = ["std", "aes"] }
base64 = { version = "0.22", default-features = false, features = ["std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"], default-features = false }
sha2 = { version = "0.10", default-features = false }
hmac = { version = "0.12", default-features = false }
pbkdf2 = { version = "0.12", default-features = false, features = ["hmac"] }
des = { version = "0.8", default-features = false }
obfstr = "0.4"
scrypt = { version = "0.11", default-features = false }
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }


